# Shadow

./: CONTRIBUTING.md  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs  store.rs
cli/src/commands/: add.rs  init.rs  key.rs  mod.rs  recv.rs  send.rs
cli/src/crypto/: identity.rs  mod.rs  ratchet.rs  x3dh.rs
cli/src/transport/: nostr.rs
cli/src/tui/: app.rs  mod.rs  ui.rs
core/: identity.py  ratchet.py  x3dh.py
docs/: PROTOCOL.md  THREAT_MODEL.md
mobile/: App.tsx  app.json  package.json  tsconfig.json
mobile/src/components/: MessageBubble.tsx  QRDisplay.tsx
mobile/src/crypto/: identity.ts  ratchet.ts  x3dh.ts
mobile/src/navigation/: index.tsx
mobile/src/screens/: AddContactScreen.tsx  ChatScreen.tsx  HomeScreen.tsx  KeyScreen.tsx  VerifyScreen.tsx
mobile/src/store/: contacts.ts  keys.ts  messages.ts
mobile/src/transport/: nostr.ts
tests/: test_integration.py  test_ratchet.py  test_x3dh.py
transport/: nostr.py  relay_client.py  sealed_sender.py
